--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .menu-list-item:hover {
-  color: rgba(255, 255, 255, 0.5);
+  color: #4dbf00
 }
 
 .menu-list-item.active {
@@ -128,9 +128,19 @@ body {
   margin-bottom: 40px;
   cursor: pointer;
 }
+
 .left-menu-icon:hover{
   color: rgba(255, 255, 255, 0.5);
 }
+
+.left-menu-icon.fas{
+  transition: color 0.2s;
+}
+
+.left-menu-icon.fas:hover{
+  color: #4dbf00;
+}
+
 .container {
   background-color: #151515;
   min-height: calc(100vh - 50px);
@@ -251,6 +261,11 @@ body {
   left: 50px;
   opacity: 0;
   transition: 0.2s all ease-in-out;
+}
+
+.movie-list-item-button:hover{
+  background-color: #abec7f;
+  color: #000;
 }
 
 .arrow {
