--- a/style.css
+++ b/style.css
@@ -204,10 +204,11 @@ body {
   position: relative;
 }
 
+
 .movie-list-item:hover .movie-list-item-img {
   transform: scale(1.2);
   margin: 0 30px;
-  opacity: 0.5;
+  opacity: 0.1;
 }
 
 .movie-list-item:hover .movie-list-item-title,
@@ -225,7 +226,6 @@ body {
 }
 
 .movie-list-item-title {
-  background-color: #333;
   padding: 0 10px;
   font-size: 32px;
   font-weight: bold;
@@ -237,7 +237,6 @@ body {
 }
 
 .movie-list-item-desc {
-  background-color: #333;
   padding: 10px;
   font-size: 14px;
   position: absolute;
@@ -280,6 +279,10 @@ body {
 
 .container.active {
   background-color: white;
+}
+
+.movie-list-title {
+  padding-top: 32px;
 }
 
 .movie-list-title.active {
